--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             <h1 class="ae-5 fronLeft">Petabytegames</h1>
                             <div class="light ae-6 fromrRight">
                                 <p class="opacity-8">We make games, software and other cool stuff.</p>
-                                <a href="#slide-3" target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i class="material-icons small">book</i>Learn More</a>
+                                <a href="#DiscordBot" target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i class="material-icons small">book</i>Learn More</a>
                             </div>
                         </div>
                     </div>
