Updated terms and privacy

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                 <h1 class="ae-2">Bitconnect Discord Bot</h1>
                                 <p class="ae-3"><span class="opacity-8">This application gives users the ability to check the current price of over 1000 different cryptocurrencies. It also shows BTC, ETH, DOGE and XLM price as its status Example: “Watching BTC = 1 $”. Users can also buy and sell crypto coins. Users can also request free USD with command $request, but to get that free money other users have to validate that request with command $validate. One request requires a certain amount of validations to get accepted. There are also coupons that users can redeem to get a certain amount of USD. This bot does not currently use real money.</span></p>
                                 <a href="https://discord.com/oauth2/authorize?client_id=827196499880443914&permissions=274877926400&scope=bot" target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i class="material-icons small">add_box</i>Invite Bot</a>
-                                <a href="https://top.gg/bot/827196499880443914" target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i class="material-icons small">add_box</i>Top.gg</a>
+                                <a href="https://top.gg/bot/940968101627969598" target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i class="material-icons small">add_box</i>Top.gg</a>
                             </li>
                             <li class="col-6-12 right ae-1 fromAbove">
 
@@ -302,7 +302,7 @@
         <div class="sections desktop">
             <div class="left">
                 <ul class="menu uppercase">
-                    <li><a href="https://petabytegames.com/DiscordBot/" target="_blank">View Discord Bot Legal Documents</a></li>
+                    <li><a href="./DiscordBot/index.html" target="_blank">View Discord Bot Legal Documents</a></li>
                 </ul>
             </div>
             <div class="right">
