--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                         <h1 class="huge ae-1 margin-bottom-2">Learn More</h1>
                         <p class="hero ae-2 margin-bottom-3"><span class="opacity-8">Learning never exhausts the mind.</span></p>
                         <a href="https://discord.gg/qMXJbBsnVt" target="_blank" class="button hollow ae-5"><img src="assets/img/DiscordWordmark.png" height="63" /></a>
-                        <a href="https://github.com/Petabytegames" target="_blank" class="button hollow ae-5"><img src="assets/img/GitHub_Logo_White.png" height="63" /></a>
+                        <a href="https://github.com/JAAKKQ" target="_blank" class="button hollow ae-5"><img src="assets/img/GitHub_Logo_White.png" height="63" /></a>
                     </div>
 
                 </div>
