--- a/DiscordBot/privacy.html
+++ b/DiscordBot/privacy.html
@@ -11,11 +11,11 @@
 
 <p></p>
 
-<p>www.petabytegames.com (&quot;us&quot;, &quot;we&quot;, or &quot;our&quot;) operates the Discord Bot&nbsp;(hereinafter referred to as the &quot;Service&quot;).</p>
+<p>www.r3ne.net (&quot;us&quot;, &quot;we&quot;, or &quot;our&quot;) operates the Discord Bot&nbsp;(hereinafter referred to as the &quot;Service&quot;).</p>
 
 <p>This page informs you of our policies regarding the collection, use and disclosure of personal data when you use our Service and the choices you have associated with that data.</p>
 
-<p>We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, the terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, accessible from https://petabytegames.com/DiscordBot/</p>
+<p>We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, the terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, accessible from https://www.r3ne.net/DiscordBot/</p>
 
 <p><strong>Definitions</strong></p>
 
@@ -23,7 +23,7 @@
 	<li>
 	<p>Service</p>
 
-	<p>Service is the Bitcoin Discord Bot&nbsp;operated by www.petabytegames.com</p>
+	<p>Service is the Bitcoin Discord Bot&nbsp;operated by www.r3ne.net</p>
 	</li>
 	<li>
 	<p>Personal Data</p>
@@ -74,7 +74,7 @@
 
 <p><strong>Use of Data</strong></p>
 
-<p>www.petabytegames.com&nbsp;uses the collected data for various purposes:</p>
+<p>www.r3ne.net&nbsp;uses the collected data for various purposes:</p>
 
 <ul>
 	<li>To provide and maintain our Service</li>
@@ -89,9 +89,9 @@
 
 <p>Legal Basis for Processing Personal Data under the General Data Protection Regulation (GDPR)</p>
 
-<p>If you are from the European Economic Area (EEA), www.petabytegames.com legal basis for collecting and using the personal information described in this Privacy Policy depends on the Personal Data we collect and the specific context in which we collect it.</p>
+<p>If you are from the European Economic Area (EEA), www.r3ne.net legal basis for collecting and using the personal information described in this Privacy Policy depends on the Personal Data we collect and the specific context in which we collect it.</p>
 
-<p>www.petabytegames.com&nbsp;may process your Personal Data because:</p>
+<p>www.r3ne.net&nbsp;may process your Personal Data because:</p>
 
 <ul>
 	<li>We need to perform a contract with you</li>
@@ -102,9 +102,9 @@
 
 <p><strong>Retention of Data</strong></p>
 
-<p>www.petabytegames.com&nbsp;will retain your Personal Data only for as long as is necessary for the purposes set out in this Privacy Policy. We will retain and use your Personal Data to the extent necessary to comply with our legal obligations (for example, if we are required to retain your data to comply with applicable laws), resolve disputes and enforce our legal agreements and policies.</p>
+<p>www.r3ne.net&nbsp;will retain your Personal Data only for as long as is necessary for the purposes set out in this Privacy Policy. We will retain and use your Personal Data to the extent necessary to comply with our legal obligations (for example, if we are required to retain your data to comply with applicable laws), resolve disputes and enforce our legal agreements and policies.</p>
 
-<p>www.petabytegames.com&nbsp;will also retain Usage Data for internal analysis purposes. Usage Data is generally retained for a shorter period of time, except when this data is used to strengthen the security or to improve the functionality of our Service, or we are legally obligated to retain this data for longer periods.</p>
+<p>www.r3ne.net&nbsp;will also retain Usage Data for internal analysis purposes. Usage Data is generally retained for a shorter period of time, except when this data is used to strengthen the security or to improve the functionality of our Service, or we are legally obligated to retain this data for longer periods.</p>
 
 <p><strong>Transfer of Data</strong></p>
 
@@ -114,17 +114,17 @@
 
 <p>Your consent to this Privacy Policy followed by your submission of such information represents your agreement to that transfer.</p>
 
-<p>www.petabytegames.com&nbsp;will take all the steps reasonably necessary to ensure that your data is treated securely and in accordance with this Privacy Policy and no transfer of your Personal Data will take place to an organisation or a country unless there are adequate controls in place including the security of your data and other personal information.</p>
+<p>www.r3ne.net&nbsp;will take all the steps reasonably necessary to ensure that your data is treated securely and in accordance with this Privacy Policy and no transfer of your Personal Data will take place to an organisation or a country unless there are adequate controls in place including the security of your data and other personal information.</p>
 
 <p><strong>Disclosure of Data</strong></p>
 
 <p><strong>Legal Requirements</strong></p>
 
-<p>www.petabytegames.com&nbsp;may disclose your Personal Data in the good faith belief that such action is necessary to:</p>
+<p>www.r3ne.net&nbsp;may disclose your Personal Data in the good faith belief that such action is necessary to:</p>
 
 <ul>
 	<li>To comply with a legal obligation</li>
-	<li>To protect and defend the rights or property of www.petabytegames.com</li>
+	<li>To protect and defend the rights or property of www.r3ne.net</li>
 	<li>To prevent or investigate possible wrongdoing in connection with the Service</li>
 	<li>To protect the personal safety of users of the Service or the public</li>
 	<li>To protect against legal liability</li>
@@ -136,7 +136,7 @@
 
 <p><strong>Disclosure of Data</strong></p>
 
-<p>If you are a resident of the European Economic Area (EEA), you have certain data protection rights. www.petabytegames.com aims to take reasonable steps to allow you to correct, amend, delete or limit the use of your Personal Data.</p>
+<p>If you are a resident of the European Economic Area (EEA), you have certain data protection rights. www.r3ne.net aims to take reasonable steps to allow you to correct, amend, delete or limit the use of your Personal Data.</p>
 
 <p>If you wish to be informed about what Personal Data we hold about you and if you want it to be removed from our systems, please contact us.</p>
 
@@ -148,7 +148,7 @@
 	<li>The right to object.&nbsp;You have the right to object to our processing of your Personal Data.</li>
 	<li>The right of restriction.&nbsp;You have the right to request that we restrict the processing of your personal information.</li>
 	<li>The right to data portability.&nbsp;You have the right to be provided with a copy of the information we have on you in a structured, machine-readable and commonly used format.</li>
-	<li>The right to data portability.&nbsp;You also have the right to withdraw your consent at any time where www.petabytegames.com relied on your consent to process your personal information.</li>
+	<li>The right to data portability.&nbsp;You also have the right to withdraw your consent at any time where www.r3ne.net relied on your consent to process your personal information.</li>
 </ul>
 
 <p>Please note that we may ask you to verify your identity before responding to such requests.</p>
