--- a/DiscordBot/terms.html
+++ b/DiscordBot/terms.html
@@ -11,7 +11,7 @@
 
 <p></p>
 
-<p>Please read these Terms of Service (&quot;Terms&quot;, &quot;Terms of Service&quot;) carefully before using the Discord Bot (the &quot;Service&quot;) operated by www.petabytegames.com (&quot;us&quot;, &quot;we&quot;, or &quot;our&quot;).</p>
+<p>Please read these Terms of Service (&quot;Terms&quot;, &quot;Terms of Service&quot;) carefully before using the Discord Bot (the &quot;Service&quot;) operated by www.r3ne.net (&quot;us&quot;, &quot;we&quot;, or &quot;our&quot;).</p>
 
 <p>Your access to and use of the Service is conditioned upon your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who wish to access or use the Service.</p>
 
@@ -29,9 +29,9 @@
 
 <p>Our Service may contain links to third party web sites or services that are not owned or controlled by us</p>
 
-<p>www.petabytegames.com&nbsp;has no control over, and assumes no responsibility for the content, privacy policies, or practices of any third party web sites or services. We do not warrant the offerings of any of these entities/individuals or their websites.</p>
+<p>www.r3ne.net&nbsp;has no control over, and assumes no responsibility for the content, privacy policies, or practices of any third party web sites or services. We do not warrant the offerings of any of these entities/individuals or their websites.</p>
 
-<p>You acknowledge and agree that www.petabytegames.com shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such third party web sites or services.</p>
+<p>You acknowledge and agree that www.r3ne.net shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such third party web sites or services.</p>
 
 <p>We strongly advise you to read the terms and conditions and privacy policies of any third party web sites or services that you visit.</p>
 
@@ -45,13 +45,13 @@
 
 <p><strong>Indemnification</strong></p>
 
-<p>You agree to defend, indemnify and hold harmless www.petabytegames.com and its licensee and licensors, and their employees, contractors, agents, officers and directors, from and against any and all claims, damages, obligations, losses, liabilities, costs or debt, and expenses (including but not limited to attorney&#39;s fees), resulting from or arising out of a) your use and access of the Service, or b) a breach of these Terms.</p>
+<p>You agree to defend, indemnify and hold harmless www.r3ne.net and its licensee and licensors, and their employees, contractors, agents, officers and directors, from and against any and all claims, damages, obligations, losses, liabilities, costs or debt, and expenses (including but not limited to attorney&#39;s fees), resulting from or arising out of a) your use and access of the Service, or b) a breach of these Terms.</p>
 
 <p><strong>Disclaimer</strong></p>
 
 <p>Your use of the Service is at your sole risk. The Service is provided on an &quot;AS IS&quot; and &quot;AS AVAILABLE&quot; basis. The Service is provided without warranties of any kind, whether express or implied, including, but not limited to, implied warranties of merchantability, fitness for a particular purpose, non-infringement or course of performance.</p>
 
-<p>www.petabytegames.com&nbsp;its subsidiaries, affiliates, and its licensors do not warrant that a) the Service will function uninterrupted, secure or available at any particular time or location; b) any errors or defects will be corrected; c) the Service is free of viruses or other harmful components; or d) the results of using the Service will meet your requirements.</p>
+<p>www.r3ne.net&nbsp;its subsidiaries, affiliates, and its licensors do not warrant that a) the Service will function uninterrupted, secure or available at any particular time or location; b) any errors or defects will be corrected; c) the Service is free of viruses or other harmful components; or d) the results of using the Service will meet your requirements.</p>
 
 <p><strong>Exclusions</strong></p>
 
