--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="assets/icon/favicon.ico" type="image/gif" sizes="16x16">
 
     <!-- Page Title -->
-    <title>Petabytegames</title>
+    <title>R3ne</title>
 
     <!-- Compressed Styles -->
     <link href="css/slides.min.css" rel="stylesheet" type="text/css">
@@ -116,9 +116,9 @@
                 <div class="wrap">
                     <div class="fix-8-12 noSelect">
                         <div class="fix-7-12 margin-top-2">
-                            <h1 class="ae-5 fronLeft">Petabytegames</h1>
+                            <h1 class="ae-5 fronLeft">R3ne</h1>
                             <div class="light ae-6 fromrRight">
-                                <p class="opacity-8">We make games, software and other cool stuff.</p>
+                                <p class="opacity-8">I make games, software and other cool stuff.</p>
                                 <a href="#DiscordBot" target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i class="material-icons small">book</i>Learn More</a>
                             </div>
                         </div>
@@ -237,11 +237,11 @@
                         <ul class="flex left">
                             <li class="col-6-12 fromBottomLeft">
                                 <h1 class="ae-2">Games</h1>
-                                <div class="ae-3"><p class="opacity-8">We are considering releasing some games in the near future. Currently we are developing and learning about FPS multiplayer games.</p></div>
+                                <div class="ae-3"><p class="opacity-8">I am considering releasing some games in the near future. Currently I am developing and learning about FPS multiplayer games.</p></div>
                                 <ul class="flex">
                                     <li class="col-6-12 ae-3">
                                         <h3 class="margin-top-3">Supported Platforms</h3>
-                                        <p class="tiny opacity-6">We are aiming for Windows and Linux native support.</p>
+                                        <p class="tiny opacity-6">Aiming for Windows and Linux native support.</p>
                                     </li>
                                     <li class="col-6-12 ae-4">
                                         <h3 class="margin-top-3">Genre</h3>
@@ -286,7 +286,7 @@
 
                     <div class="fix-6-12">
                         <h1 class="huge ae-1 margin-bottom-2">Learn More</h1>
-                        <p class="hero ae-2 margin-bottom-3"><span class="opacity-8">Learning never exhausts the mind.</span></p>
+                        <p class="hero ae-2 margin-bottom-3"><span class="opacity-8">5/5 -Niilo22</span></p>
                         <a href="https://discord.gg/qMXJbBsnVt" target="_blank" class="button hollow ae-5"><img src="assets/img/DiscordWordmark.png" height="63" /></a>
                         <a href="https://github.com/JAAKKQ" target="_blank" class="button hollow ae-5"><img src="assets/img/GitHub_Logo_White.png" height="63" /></a>
                     </div>
