--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
     </nav>
 
-    <!-- Slide 1 (#82) -->
+    <!-- Home (#82) -->
     <section data-name="Home" class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
@@ -119,7 +119,6 @@
                             <h1 class="ae-5 fronLeft">R3ne</h1>
                             <div class="light ae-6 fromrRight">
                                 <p class="opacity-8">I make games, software and other cool stuff.</p>
-                                <a href="#DiscordBot" target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i class="material-icons small">book</i>Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -182,7 +181,7 @@
         </div>
     </div>
 
-    <!-- Slide 3 (#73) -->
+    <!-- Discord Bot (#73) -->
     <section data-name="DiscordBot" class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
@@ -192,7 +191,7 @@
                         <ul class="flex reverse">
                             <li class="col-6-30 left box-73">
                                 <h1 class="ae-2">Bitconnect Discord Bot</h1>
-                                <p class="ae-3"><span class="opacity-8">This application gives users the ability to check the current price of over 1000 different cryptocurrencies. It also shows BTC, ETH, DOGE and XLM price as its status Example: “Watching BTC = 1 $”. Users can also buy and sell crypto coins. Users can also request free USD with command $request, but to get that free money other users have to validate that request with command $validate. One request requires a certain amount of validations to get accepted. There are also coupons that users can redeem to get a certain amount of USD. This bot does not currently use real money.</span></p>
+                                <p class="ae-3"><span class="opacity-8">This application gives users the ability to check the current price of over 1000 different cryptocurrencies. It also shows BTC, ETH, DOGE and XLM price as its status. Users can also buy and sell crypto coins. This bot does not use real money.</span></p>
                                 <a href="https://discord.com/oauth2/authorize?client_id=827196499880443914&permissions=274877926400&scope=bot" target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i class="material-icons small">add_box</i>Invite Bot</a>
                                 <a href="https://top.gg/bot/940968101627969598" target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i class="material-icons small">add_box</i>Top.gg</a>
                             </li>
@@ -227,7 +226,7 @@
         </div>
         <div class="background" style="background-image:url(assets/img/background/img-73.jpg)"></div>
     </section>
-    <!-- Slide 5 (#89) -->
+    <!-- Games (#89) -->
     <section data-name="Games" class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
@@ -237,7 +236,7 @@
                         <ul class="flex left">
                             <li class="col-6-12 fromBottomLeft">
                                 <h1 class="ae-2">Games</h1>
-                                <div class="ae-3"><p class="opacity-8">I am considering releasing some games in the near future. Currently I am developing and learning about FPS multiplayer games.</p></div>
+                                <div class="ae-3"><p class="opacity-8">Currently developing a teamplay based first-person shooter multiplayer game. Where attackers are trying to capture one of the sites from defenders and plant the bomb. If the bomb explodes the attackers will win the round. If the defenders defuses the bomb in time defenders will win the round. Just like in CS.</p></div>
                                 <ul class="flex">
                                     <li class="col-6-12 ae-3">
                                         <h3 class="margin-top-3">Supported Platforms</h3>
@@ -278,7 +277,7 @@
             </div>
         </div>
     </div>
-    <!-- Slide 8 (#95) -->
+    <!-- End (#95) -->
     <section data-name="TheEnd" class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
@@ -313,7 +312,7 @@
         </div>
     </nav>
     <!-- Loading Progress Bar -->
-    <div class="progress-bar blue"></div>
+    <div class="progress-bar darkBlue"></div>
 
 </body>
 </html>
