--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         </div>
     </nav>
     <!-- Loading Progress Bar -->
-    <div class="progress-bar darkBlue"></div>
+    <div class="progress-bar darkGreen"></div>
 
 </body>
 </html>
