--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                         <ul class="flex reverse">
                             <li class="col-6-30 left box-73">
                                 <h1 class="ae-2">Bitconnect Discord Bot</h1>
-                                <p class="ae-3"><span class="opacity-8">This application gives users the ability to check the current price of over 1000 different cryptocurrencies. It also shows BTC, ETH, DOGE and XLM price as its status. Users can also buy and sell crypto coins. This bot does not use real money.</span></p>
-                                <a href="https://discord.com/oauth2/authorize?client_id=827196499880443914&permissions=274877926400&scope=bot" target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i class="material-icons small">add_box</i>Invite Bot</a>
+                                <p class="ae-3"><span class="opacity-8">This bot gives users the ability to check the current price of over 1000 different cryptocurrencies. It also shows BTC, ETH, DOGE and XLM price as its status. Users can also buy and sell crypto coins. This bot does not use real money.</span></p>
+                                <a href="https://discord.com/api/oauth2/authorize?client_id=940968101627969598&permissions=277025410048&scope=bot%20applications.commands" target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i class="material-icons small">add_box</i>Invite Bot</a>
                                 <a href="https://top.gg/bot/940968101627969598" target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i class="material-icons small">add_box</i>Top.gg</a>
                             </li>
                             <li class="col-6-12 right ae-1 fromAbove">
@@ -204,17 +204,24 @@
                         <div class="fix-11-12">
                             <ul class="grid fixedSpaces equal left grid-73">
                                 <li class="col-4-12 ae-3">
-                                    <a href="https://discord.com/oauth2/authorize?client_id=827196499880443914&permissions=274877926400&scope=bot" target="_blank" class="cell-73 rounded equalElement">
+                                    <a href="https://discord.com/api/oauth2/authorize?client_id=940968101627969598&permissions=277025410048&scope=bot%20applications.commands" target="_blank" class="cell-73 rounded equalElement">
                                         <i class="material-icons">data_usage</i>
                                         <h3>Realtime Data</h3>
                                         <p class="tiny opacity-6">Price data is collected in realtime. The bot calculates the average price across multiple platforms.</p>
                                     </a>
                                 </li>
                                 <li class="col-4-12 ae-4">
-                                    <a href="https://discord.com/oauth2/authorize?client_id=827196499880443914&permissions=274877926400&scope=bot" target="_blank" class="cell-73 rounded equalElement">
+                                    <a href="https://discord.com/api/oauth2/authorize?client_id=940968101627969598&permissions=277025410048&scope=bot%20applications.commands" target="_blank" class="cell-73 rounded equalElement">
                                         <i class="material-icons">attach_money</i>
                                         <h3>Economy</h3>
                                         <p class="tiny opacity-6">You can send coins within Discord's users. You can even sell and buy coins!</p>
+                                    </a>
+                                </li>
+                                <li class="col-4-12 ae-4">
+                                    <a href="https://discord.com/developers/docs/intro#bots-and-apps" target="_blank" class="cell-73 rounded equalElement">
+                                        <i class="material-icons">book</i>
+                                        <h3>What is a Discord Bot?</h3>
+                                        <p class="tiny opacity-6">Bots are software applications coded to run automated tasks. Learn more by clicking me!</p>
                                     </a>
                                 </li>
                             </ul>
