--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="icon" href="assets/icon/favicon.ico" type="image/gif" sizes="16x16">
+    <meta name="Description" CONTENT="I make games, software and other cool stuff.">
+    <meta name="robots" content="noindex,nofollow">
 
     <!-- Page Title -->
     <title>R3ne</title>
