--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="icon" href="assets/icon/favicon.ico" type="image/gif" sizes="16x16">
     <meta name="Description" CONTENT="I make games, software and other cool stuff.">
-    <meta name="robots" content="noindex,nofollow">
+    <meta name="keywords" content="rene, r3ne"/>
 
     <!-- Page Title -->
     <title>R3ne</title>
