Update Internet. WSOY 2021. 107 s. 12 r.html

--- a/InternetWSOY2021107s12r/Internet. WSOY 2021. 107 s. 12 r.html
+++ b/InternetWSOY2021107s12r/Internet. WSOY 2021. 107 s. 12 r.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <title>Internet. WSOY 2021. 107 s. 12 r.</title>
+    <title>107 s. 12 r.</title>
     <meta http-equiv="refresh" content="0; url = https://www.wsoy.fi/kirja/mikko-hypponen/internet/9789510464410" />
-    <meta name="Description" CONTENT="Internet. WSOY 2021. 107 s. 12 r.">
-    <meta name="keywords" content="Internet. WSOY 2021. 107 s. 12 r."/>
+    <meta name="Description" CONTENT="107 s. 12 r.">
+    <meta name="keywords" content="107 s. 12 r."/>
 </head>
 
 <body>
-    <h1>Internet. WSOY 2021. 107 s. 12 r.</h1>
+    <h1>107 s. 12 r.</h1>
     <p>Internet. WSOY 2021. 107 s. 12 r.</p>
 </body>
 
