--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,7 @@
         fetch("stats.json")
             .then(response => response.json())
             .then(data => {
-                console.log(data)
+                document.querySelector('#debug').innerHTML = data.serverCount
             })
     </script>
 
