--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                 <div class="wrap">
 
                     <div class="fix-11-12">
-                        <ul class="flex reverse" id="Bot1">
+                        <ul class="flex reverse">
                             <script>
                                 fetch("stats.json")
                                     .then(response => response.json())
@@ -316,7 +316,7 @@
                             </script>
                             <li class="col-6-30 left box-73">
                                 <h1 class="ae-2">Bitcoin Discord Bot</h1>
-                                <p class="ae-3"><span class="opacity-8">This bot gives users the ability to check the
+                                <p class="ae-3"><span id="Bot1" class="opacity-8">This bot gives users the ability to check the
                                         current price of over 1000 different cryptocurrencies. It also shows BTC, ETH,
                                         DOGE and XLM price as its status. Users can also buy and sell crypto coins. This
                                         bot does not use real money.</span></p>
