--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                 fetch("stats.json")
                                     .then(response => response.json())
                                     .then(data => {
-                                        document.querySelector('#BotDynDescription').innerHTML = "Currently serving " + data.serverCount + " Discord servers and " + data.memberCount + " in total users."
+                                        document.querySelector('#BotDynDescription').innerHTML = "Currently serving " + data.serverCount + " Discord servers and " + data.memberCount + " users in total."
                                     })
                             </script>
                             <li class="col-6-30 left box-73">
