Discord desc edit

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                             </script>
                             <li class="col-6-30 left box-73">
                                 <h1 class="ae-2">Bitcoin Discord Bot</h1>
-                                <p class="ae-3"><span class="opacity-8"></span>This bot gives users the ability to check the current price of over 1000 different cryptocurrencies. It also shows BTC, ETH, DOGE and XLM price as its status. Users can also buy and sell crypto coins. This bot does not use real money.</p>
+                                <p class="ae-3"><span class="opacity-8"></span>This bot gives users the ability to check the current price of over 1000 different cryptocurrencies. It also shows BTC, ETH, DOGE and XLM price as its status. Users can also buy and sell crypto coins. You can even set price alerts!  And the best thing is that all this is FREE!</p>
                                 <p class="ae-4"><span id="BotDynDescription" class="opacity-8"></span></p>
                                 <a href="https://discord.com/api/oauth2/authorize?client_id=940968101627969598&permissions=277025410048&scope=bot%20applications.commands"
                                     target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i
@@ -354,10 +354,9 @@
                                 <li class="col-4-12 ae-4">
                                     <a href="https://discord.com/developers/docs/intro#bots-and-apps" target="_blank"
                                         class="cell-73 rounded equalElement">
-                                        <i class="material-icons">book</i>
-                                        <h3>What is a Discord Bot?</h3>
-                                        <p class="tiny opacity-6">Bots are software applications coded to run automated
-                                            tasks. Learn more by clicking me!</p>
+                                        <i class="material-icons">alert</i>
+                                        <h3>Price alerts</h3>
+                                        <p class="tiny opacity-6">When the price reaches the set amount the bot will send you a direct message to you.</p>
                                     </a>
                                 </li>
                             </ul>
