--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                     </a>
                                 </li>
                                 <li class="col-4-12 ae-4">
-                                    <a href="https://discord.com/developers/docs/intro#bots-and-apps" target="_blank"
+                                    <a href="#DiscordBot" target=""
                                         class="cell-73 rounded equalElement">
                                         <i class="material-icons">notifications</i>
                                         <h3>Price alerts</h3>
