--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
                                         <img src="assets/img/ETH-qr-shared.png" class="wide" alt="Thumbnail" />
                                     </div>
                                     <div class="name-74 equalElement table wide">
-                                        <div class="cell center top">
+                                        <div class="center">
                                             <input type="text" id="ETH-Address"
-                                                value="0x7ff709898f402FF35079993B020974A1F7895999" maxlength="55"
-                                                size="45" style="text-align:center;" readonly><br><br>
+                                                value="0x7ff709898f402FF35079993B020974A1F7895999"
+                                                size="30" style="text-align:center;" readonly><br><br>
                                             <p class="tiny opacity-7 cropBottom">Copy the raw ETH address above ^</p>
                                             <p class="tiny opacity-7 cropBottom">or use the QR code.</p>
                                         </div>
