--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                                     </div>
                                     <div class="name-74 equalElement table wide">
                                         <div class="cell center top">
-                                            <textarea>0x7ff709898f402FF35079993B020974A1F7895999</textarea>
+                                            <textarea readonly>0x7ff709898f402FF35079993B020974A1F7895999</textarea>
                                             <p class="tiny opacity-7 cropBottom">Copy the raw ETH address above ^</p>
                                             <p class="tiny opacity-7 cropBottom">or use the QR code.</p>
                                         </div>
