--- a/DiscordBot/privacy.html
+++ b/DiscordBot/privacy.html
@@ -1634,7 +1634,7 @@
     <p class="c4"><span class="c1">Contact us</span></p>
     <p class="c4"><span>If you have any issues or questions with these policies, please contact us</span><span
             class="c2">&nbsp;by email or by our Discord server.</span></p>
-    <p class="c4"><span class="c2">Email: support@petabytegames.com</span></p>
+    <p class="c4"><span class="c2">Email: support@r3ne.net</span></p>
     <p class="c4"><span>Discord: </span><span class="c6 c9"><a class="c10"
                 href="https://www.google.com/url?q=https://discord.gg/qMXJbBsnVt&amp;sa=D&amp;source=editors&amp;ust=1648484171408290&amp;usg=AOvVaw3aYmINPf1StAEvfUWLo61U">https://discord.gg/qMXJbBsnVt</a></span>
     </p>
