--- a/DiscordBot/terms.html
+++ b/DiscordBot/terms.html
@@ -227,7 +227,7 @@
     <p class="c0"><span class="c6">Contact us</span></p>
     <p class="c0"><span class="c2">If you have any questions about our Terms, please contact us by email or by our
             Discord server.</span></p>
-    <p class="c0"><span class="c2">Email: support@petabytegames.com</span></p>
+    <p class="c0"><span class="c2">Email: support@r3ne.net</span></p>
     <p class="c0"><span>Discord: </span><span class="c5"><a class="c8"
                 href="https://www.google.com/url?q=https://discord.gg/qMXJbBsnVt&amp;sa=D&amp;source=editors&amp;ust=1648484357373390&amp;usg=AOvVaw1WCi1mYFlS6Wju3Ng0DjY4">https://discord.gg/qMXJbBsnVt</a></span>
     </p>
