--- a/index.html
+++ b/index.html
@@ -239,37 +239,52 @@
                 <div class="wrap">
 
                     <div class="fix-10-12 toCenter">
-                        <h2 class="ae-1">Ethereum</h2>
-                        <p class="ae-2"><span class="opacity-8">Donate me some ETH!</span></p>
+                        <h2 class="ae-1">Mmmmm... Moneyy...</h2>
+                        <p class="ae-2"><span class="opacity-8"></span></p>
                     </div>
 
-                    <script>
-                        function CopyText() {
-                            /* Get the text field */
-                            var copyText = document.getElementById("TextToCopy");
-
-                            /* Select the text field */
-                            copyText.select();
-                            copyText.setSelectionRange(0, 99999); /* For mobile devices */
-
-                            /* Copy the text inside the text field */
-                            navigator.clipboard.writeText(copyText.value);
-
-                            /* Alert the copied text */
-                            alert("Copied the text: " + copyText.value);
-                        }
-                    </script>
-                    <div class="fix-4-12">
+                    <div class="fix-10-12">
                         <ul class="grid grid-74 later equal margin-top-5">
-                            <li class="center">
+                            <li class="col-4-12 ae-5">
                                 <a class="box-74">
                                     <div class="thumbnail-74">
-                                        <img src="assets/img/ETH-qr-shared.png" class="wide" alt="Thumbnail" />
+                                        <img src="assets/img/Bitcoin-QR.png" class="wide" alt="Thumbnail" />
                                     </div>
                                     <div class="name-74 equalElement table wide">
                                         <div class="cell center top">
+                                            <h3>₿itcoin</h3>
+                                            <textarea readonly>326vnwLjsjjjFHg56jHNEVCGGXGh2WQZUE</textarea>
+                                            <p class="tiny opacity-7 cropBottom">Copy the raw BTC address above^</p>
+                                            <p class="tiny opacity-7 cropBottom">or use the QR code.</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="col-4-12 ae-5">
+                                <a class="box-74">
+                                    <div class="thumbnail-74">
+                                        <img src="assets/img/Ethereum-QR.png" class="wide" alt="Thumbnail" />
+                                    </div>
+                                    <div class="name-74 equalElement table wide">
+                                        <div class="cell center top">
+                                            <h3>Ξthereum</h3>
                                             <textarea readonly>0x7ff709898f402FF35079993B020974A1F7895999</textarea>
-                                            <p class="tiny opacity-7 cropBottom">Copy the raw ETH address above ^</p>
+                                            <p class="tiny opacity-7 cropBottom">Copy the raw ETH address above^</p>
+                                            <p class="tiny opacity-7 cropBottom">or use the QR code.</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="col-4-12 ae-5">
+                                <a class="box-74">
+                                    <div class="thumbnail-74">
+                                        <img src="assets/img/Dogecoin-QR.png" class="wide" alt="Thumbnail" />
+                                    </div>
+                                    <div class="name-74 equalElement table wide">
+                                        <div class="cell center top">
+                                            <h3>Ðogecoin</h3>
+                                            <textarea readonly>D5y48zzDR1ANRkc2d5CPnWUi2UKu8y9d5C</textarea>
+                                            <p class="tiny opacity-7 cropBottom">Copy the raw DOGE address above^</p>
                                             <p class="tiny opacity-7 cropBottom">or use the QR code.</p>
                                         </div>
                                     </div>
@@ -277,11 +292,10 @@
                             </li>
                         </ul>
                     </div>
-
                 </div>
             </div>
         </div>
-        <div class="background" style="background-image:url(assets/img/background/ETH-wallpaper.jpg)"></div>
+        <div class="background" style="background-image:url(assets/img/background/SendMoneyPLS.jpg)"></div>
     </section>
 
     <!-- End (#95) -->
