--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         </div>
     </div>
 
-    <!-- Ethereum -->
+    <!-- Coins -->
     <section data-name="GiveMeMoney" class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
@@ -242,10 +242,10 @@
                         <h2 class="ae-1">Mmmmm... Moneyy...</h2>
                         <p class="ae-2"><span class="opacity-8"></span></p>
                     </div>
-
+                    
                     <div class="fix-10-12">
                         <ul class="grid grid-74 later equal margin-top-5">
-                            <li class="col-4-12 ae-5">
+                            <li class="col-2-12 ae-5">
                                 <a class="box-74">
                                     <!--
                                     <div class="thumbnail-74">
@@ -265,6 +265,21 @@
                             <li class="col-4-12 ae-5">
                                 <a class="box-74">
                                     <div class="thumbnail-74">
+                                        <img src="assets/img/Bitcoin-QR.png" class="wide" alt="Thumbnail" />
+                                    </div>
+                                    <div class="name-74 equalElement table wide">
+                                        <div class="cell center top">
+                                            <h3>₿itcoin</h3>
+                                            <textarea readonly>326vnwLjsjjjFHg56jHNEVCGGXGh2WQZUE</textarea>
+                                            <p class="tiny opacity-7 cropBottom">Copy the raw BTC address above^</p>
+                                            <p class="tiny opacity-7 cropBottom">or use the QR code.</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="col-4-12 ae-5">
+                                <a class="box-74">
+                                    <div class="thumbnail-74">
                                         <img src="assets/img/Ethereum-QR.png" class="wide" alt="Thumbnail" />
                                     </div>
                                     <div class="name-74 equalElement table wide">
@@ -275,23 +290,6 @@
                                             <p class="tiny opacity-7 cropBottom">or use the QR code.</p>
                                         </div>
                                     </div>
-                                </a>
-                            </li>
-                            <li class="col-4-12 ae-5">
-                                <a class="box-74">
-                                    <!--
-                                    <div class="thumbnail-74">
-                                        <img src="assets/img/Dogecoin-QR.png" class="wide" alt="Thumbnail" />
-                                    </div>
-                                    <div class="name-74 equalElement table wide">
-                                        <div class="cell center top">
-                                            <h3>Ðogecoin</h3>
-                                            <textarea readonly>D5y48zzDR1ANRkc2d5CPnWUi2UKu8y9d5C</textarea>
-                                            <p class="tiny opacity-7 cropBottom">Copy the raw DOGE address above^</p>
-                                            <p class="tiny opacity-7 cropBottom">or use the QR code.</p>
-                                        </div>
-                                    </div>
-                                    -->
                                 </a>
                             </li>
                         </ul>
