--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
                                 <a href="https://top.gg/bot/940968101627969598" target="_blank"
                                     class="button blue gradient cropBottom ae-7 fromCenter"><i
                                         class="material-icons small">add_box</i>Top.gg</a>
+                                <a href="https://github.com/JAAKKQ/CryptoDiscordBot" target="_blank"
+                                    class="button blue gradient cropBottom ae-7 fromCenter"><i
+                                        class="material-icons small">cloud_download</i>Source</a>
                             </li>
                             <li class="col-6-12 right ae-1 fromAbove">
 
@@ -242,7 +245,7 @@
                         <h2 class="ae-1">Mmmmm... Moneyy...</h2>
                         <p class="ae-2"><span class="opacity-8"></span></p>
                     </div>
-                    
+
                     <div class="fix-10-12">
                         <ul class="grid grid-74 later equal margin-top-5">
                             <li class="col-2-12 ae-5">
