--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                             <li class="col-6-12 fromBottomLeft">
                                 <h1 class="ae-2">Games</h1>
                                 <div class="ae-3">
-                                    <p class="opacity-8">Currently developing a teamplay based first-person shooter
+                                    <p class="opacity-8">Inactively developing a teamplay based first-person shooter
                                         multiplayer game. Where attackers are trying to capture one of the sites from
                                         defenders and plant the bomb. If the bomb explodes the attackers will win the
                                         round. If the defenders defuses the bomb in time defenders will win the round.
@@ -198,6 +198,14 @@
                                         <h3 class="margin-top-3">Genre</h3>
                                         <p class="tiny opacity-6">FPS multiplayer</p>
                                     </li>
+                                    <!--
+                                    <a href="https://cdn.r3ne.net/win"
+                                        target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i
+                                            class="material-icons small">add_box</i>Download Win64</a>
+                                    <a href="https://cdn.r3ne.net/linux"
+                                        target="_blank" class="button blue gradient cropBottom ae-7 fromCenter"><i
+                                            class="material-icons small">add_box</i>Download Linux</a>
+                                            -->
                                 </ul>
                             </li>
                             <li class="col-1-12">&nbsp;</li>
