--- a/index.html
+++ b/index.html
@@ -318,10 +318,8 @@
                 <div class="wrap">
 
                     <div class="fix-6-12">
-                        <h1 class="huge ae-1 margin-bottom-2">Learn More</h1>
-                        <p class="hero ae-2 margin-bottom-3"><span class="opacity-8">5/5 -Niilo22</span></p>
-                        <a href="https://discord.gg/qMXJbBsnVt" target="_blank" class="button hollow ae-5"><img
-                                src="assets/img/DiscordWordmark.png" height="63" /></a>
+                        <h1 class="huge ae-1 margin-bottom-2">Contact</h1>
+                        <p class="hero ae-2 margin-bottom-3"><span class="opacity-8">mail@r3ne.net</span></p>
                         <a href="https://github.com/JAAKKQ" target="_blank" class="button hollow ae-5"><img
                                 src="assets/img/GitHub_Logo_White.png" height="63" /></a>
                     </div>
