Redirect and privacy title change

--- a/DiscordBot/privacy.html
+++ b/DiscordBot/privacy.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Internet. WSOY 2021. 107 s. 12 r.</title>
+    <title>Privacy.</title>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <style type="text/css">
         .lst-kix_kolb1sb89fy2-0>li:before {
