--- a/DiscordBot/index.html
+++ b/DiscordBot/index.html
@@ -14,7 +14,7 @@
 <p style="text-align: center;"><input type="submit" value="View Privacy Policy" /></p>
 </form>
 
-<form action="https://petabytegames.com/">
+<form action="https://r3ne.net/">
 <p style="text-align: center;"><input type="submit" value="Go Home" /></p>
 </form>
 
