--- a/kuutio/index.html
+++ b/kuutio/index.html
@@ -47,16 +47,12 @@
                 <div class="wrap">
                     <div class="fix-8 noSelect">
                         <div class="fix-7 margin-top-2">
-                            <h1 class="ae-5 fronLeft">Kuutio - Best Modded Minecraft Server</h1>
+                            <h1 class="ae-5 fronLeft">Kuutio - Paras modattu Minecraft palvelin!</h1>
                             <div class="light ae-6 fromrRight">
-                                <p class="opacity-8">1. Lataa Curseforge alhaalta olevasta "Download Curseforge" napista</p>
-                                <p class="opacity-8">2. Asenna Curseforge</p>
-                                <p class="opacity-8">3. Ladattua Curseforgen lataa Kuutio Modpack "Download Modpack" napista</p>
-                                <p class="opacity-8">4. Lisää Kuutio Modpack menemällä "create new profile" => "import" => valitse lataamasi Kuutio Modpack</p>
-                                <p class="opacity-8">5. Kun olet päässyt Minecraft-valikkoon valitse multiplayer => add server => server address: kuutio.r3ne.net</p>
-                                <p class="opacity-8">6. Nyt olet valmis pelailemaan!</p>
-                                <a href="https://download.curseforge.com/" class="button darkGreen gradient cropBottom ae-7 fromCenter"><i class="material-icons small">download</i>Download Curseforge</a>
-                                <a href="https://cdn.discordapp.com/attachments/1037063310568337459/1038802099804328066/Kuutio_V1-0.2.zip" class="button darkGreen gradient cropBottom ae-7 fromCenter"><i class="material-icons small">download</i>Download Modpack</a>
+                                <p class="opacity-manual">Ohjeet pelaamiseen löydät Kuution Discord kanavalta.</p>
+                                <a href="https://discord.gg/TbbmMd2avB" target="_blank"
+                                    class="button blue gradient cropBottom ae-7 fromCenter"><i
+                                        class="material-icons small">discord</i>Discord Kutsu</a>
                             </div>
                         </div>
                     </div>
